--- a/app/public/index.html
+++ b/app/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div>
-      <movement-table></movement-table>
+      <movement-table localMode="false"></movement-table>
       <add-movement-form></add-movement-form>
     </div>
   </body>
